[tool.poetry]
name = "twauth-fastapi"
version = "0.1.0"
description = "Fork of twitterdev/twauth-web using fastapi instead of flask, and poetry instead of pipenv"
authors = ["Chris Smith-Clarke <chrissmithlclarke@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.2"
oauth2 = "^1.9.0"
uvicorn = "^0.14.0"
Jinja2 = "^3.0.1"
aiofiles = "^0.7.0"
python-multipart = "^0.0.5"
python-dotenv = "^0.18.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
isort = "^5.9.1"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
